welcome.lessons.welcome.bat.bool2.In1To10.scala.error
in1To10:12: error: ';' expected but 'else' found.
	else return false
        ^